# Conditional-Counterfactual-Mean-Embeddings

./: LICENSE  README.md  ccme.py  demo_notebook.ipynb  inference.py  kernels.py  losses.py  models.py  plot_densities.py  plot_mnist.py  plot_mses.py  pyproject.toml  utils.py
configs/mnist/method/: df.yaml  ridge.yaml
configs/simulation/: config.yaml
configs/simulation/method/: df.yaml  ridge.yaml
experiments/: experiment_densities.py  experiment_mnist.py  experiment_robustness.py  plot_mses.py
